feat(client): port iter-1+iter-2 canonical-parity work from examples submodule WT
Standalone HEAD c3e4058 was phantom-broken — DomainClient/CommandHandlerClient/
QueryClient/SpeculativeClient WT-imported dev.angzarr.client.internal.EndpointFormatter
which was never defined anywhere. The fix has lived in the embedded
examples-java submodule WT for weeks: a Transport.java resolver class plus a
formatEndpoint() inline helper that together replace the phantom Endpoints
design. This commit migrates that work (plus the rest of the iter-1/iter-2
canonical surface) into the standalone repo per the cross-language migration
plan.

New canonical surface (verified Py+Rs counterparts for each):
- Identity.java                — HIGH-2.2 UUIDv5 deterministic root computation
- Transport.java               — HIGH-6.1 ANGZARR_MODE / UDS / TCP resolver
- error_codes/{Codes,Keys,Messages}.java — HIGH-1.4 51-code inventory + audit #59
- server/{Server,Readiness,ServerConfig}.java — HIGH-5.1 per-kind server runners
- annotations/HandlesFact.java — fact-vs-event handler marker
- router/UpcasterRouter.java   — HIGH-4.4 moved from client/ to router/, in Built sealed

iter-2 spec items applied to existing files: SEATS_IDENTICAL, HIGH-X.Y
closures, BuildException structured-detail support, GrpcAdapters extension.

PR #12 cascade work (15 new commands across hand/table) is consumed via
proto regeneration — bindings are gitignored and regenerated by
`just generate-proto`.

New test surface (44 tests):
- BuilderParityTest, CommandBuilderSyncModeTest, CommandBuilderValidationCodesTest
- DestinationsParityTest, ErrorsStructuralTest, GrpcErrorCodeStampTest
- HelpersParityTest, HelpersSpecConvergenceTest, IdentityTest
- QueryBuilderRangeTest, RetryParityTest, TransportTest, ValidationParityTest
- error_codes/ErrorInventoryTest
- router/{DispatchDecodeError, DuplicateCommandHandler, HandlesFact,
  RouterAccessors, RouterSyncTargets, RouterValidationCanonicalErrors,
  UpcasterBuilt}Test
- server/{Con